UI: Fix readability -> Titles, Bulk Archives

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -75,6 +75,7 @@
 .display-box-headline {
   font-size: 33px;
   font-weight: bold;
+  color: white;
 }
 
 .bullet {
